# facile-lang

./: .gitignore  CMakeLists.txt  README.md  build.sh  deps.md  exec.sh  facile.in  output.il  test.ez  test.il
examples/: comment.ez  elif.ez  else.ez  fibonnaci.ez  for.ez  if-else.ez  if.ez  io.ez  negative.ez  nombre_premier.ez  operations.ez  pgcd.ez  string.ez  test.ez  unary.ez  while.ez
examples/Boucles/: for.ez  for_step.ez  nested_while.ez  while.ez  while_break.ez  while_continue.ez
examples/Conditions/: and.ez  elif.ez  else.ez  if.ez  nested_if.ez  or.ez  true_false.ez
examples/IO/: print_calc.ez  print_string.ez  print_string_calc.ez  print_var.ez  read.ez  read_symbol.ez
examples/Operations/: operations.ez  operations_var.ez
src/: ReadWrite.cs  ReadWrite.il  facile.l  facile.lex  facile.y
